k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shartan-view
  namespace: shartan
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: shartan-view
  template:
    metadata:
      labels:
        app: shartan-view
    spec:
      containers:
        - name: shartan-view
          image: houseofmoran/shartan:2.4.1
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 50Mi
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 1
