k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: shartan-view-service
  namespace: shartan
spec:
  type: NodePort
  selector:
    app: shartan-view
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
