k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shartan-ingress
  namespace: shartan
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: shartan.houseofmoran.io
    http: &http
      paths:
      - path: /
        backend:
          serviceName: shartan-view-service
          servicePort: 80
  - host: shartan.minikube
    http: *http
